Ajustado filtros do método search e implementado filtro de newsletter compartilhada ou não.